Fix dark mode

--- a/www/src/js/views/static/HacktoberfestContainer.scss
+++ b/www/src/js/views/static/HacktoberfestContainer.scss
@@ -68,7 +68,6 @@
         font-weight: bold;
         line-height: 2rem;
         text-align: center;
-        color: #fff;
         border: 1px solid theme-color();
       }
     }
